--- a/paginas/sobre-nosotros.html
+++ b/paginas/sobre-nosotros.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
         <link rel="shortcut icon" href="../imagenes/favicon-GDA.png" type="image/x-icon">
         <title>Galería de arte by Tiziano Parto</title>
     </head>
