--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <h2>Contacto</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda debitis animi quaerat ullam eligendi nulla facere tenetur distinctio quod impedit, ipsum vitae quam! Autem fugit dolores totam facere, quisquam delectus?</p>
+            <p>¡Nos encantaría escuchar de ti! Si tienes alguna pregunta, comentario o estás interesado en alguna de nuestras obras de arte, no dudes en ponerte en contacto con nosotros. Estamos aquí para ayudarte a encontrar la pieza perfecta para tu colección o para responder cualquier consulta que puedas tener.</p>
             <div>
                 <form style="width: 26rem;">
                     <!-- Name input -->
