--- a/paginas/pinturas.html
+++ b/paginas/pinturas.html
@@ -21,52 +21,52 @@
                 <div class="hijo">
                     <h3>Mona Lisa</h3>
                     <img src="../imagenes/mona-lisa.jpg" alt="Mona Lisa">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum vero, aspernatur veniam at, cupiditate repellat magnam hic dicta odit expedita ad repellendus beatae ducimus temporibus quibusdam excepturi velit aut.</p>
+                    <p>La "Mona Lisa", pintada por Leonardo da Vinci en el Renacimiento, es mucho más que un retrato. Su enigmática sonrisa y mirada misteriosa han fascinado al mundo durante siglos. Esta obra maestra es un estudio de la belleza femenina y una muestra del talento incomparable de su creador. Con su fama legendaria, La Mona Lisa sigue cautivando a millones de personas en el Louvre, donde se exhibe con reverencia como una joya del patrimonio cultural mundial.</p>
                 </div>
                 <div class="hijo">
                     <h3>La última cena</h3>
                     <img src="../imagenes/la-ultima-cena.jpg" alt="La última cena">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, illo dicta? Iure facilis quasi quam. Neque, placeat! Doloremque cupiditate minima cumque laboriosam, in officia maxime exercitationem, repellat, nobis rerum temporibus?</p>
+                    <p>"La Última Cena", pintada por Leonardo da Vinci, es una obra maestra que retrata el momento en que Jesús comparte su última comida con sus discípulos. La disposición de los personajes y las expresiones faciales transmiten la intensidad del momento. Esta obra sigue siendo admirada por su belleza estética y su impacto cultural, recordándonos la profundidad del arte religioso occidental.</p>
                 </div>
                 <div class="hijo">
                     <h3>Noche estrellada</h3>
                     <img src="../imagenes/noche-estrellada.webp" alt="Noche estrellada">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor aut impedit quaerat vitae perspiciatis! Ratione a quibusdam soluta vitae quod illo corporis, repellendus maxime minima asperiores consequuntur saepe? Iusto, sapiente.</p>
+                    <p>La "Noche Estrellada", de Vincent van Gogh, es un ícono del arte postimpresionista. Pintada en 1889, esta obra maestra evoca una sensación de asombro con su representación vibrante del cielo nocturno sobre un tranquilo pueblo francés. Con pinceladas audaces y colores intensos, Van Gogh captura la belleza del universo y nos recuerda la capacidad del arte para transmitir emociones profundas.</p>
                 </div>
                 <div class="hijo">
                     <h3>El grito</h3>
                     <img src="../imagenes/el-grito.png" alt="El grito">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ex culpa, voluptates sint consectetur quod recusandae eligendi, beatae minus cumque ab ipsum? Magni, hic sit! Libero dolore a inventore excepturi.</p>
+                    <p>"El Grito" de Edvard Munch, creado en 1893, es un ícono del expresionismo. Con colores vibrantes y pinceladas audaces, Munch retrata una figura angustiada que parece gritar en desesperación. Esta obra maestra captura la esencia del tormento humano de manera inolvidable, resonando con el espectador a través de los años.</p>
                 </div>
                 <div class="hijo">
                     <h3>Guernica</h3>
                     <img src="../imagenes/guernica.jpg" alt="Guernica">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium et, tempore provident asperiores maxime vel ex distinctio unde vitae veniam fuga quidem est dolore vero officiis quisquam ut quia libero?</p>
+                    <p>"Guernica" es la obra maestra de Picasso, una denuncia contra la brutalidad de la guerra. Pintada en 1937, representa el bombardeo de la ciudad vasca de Guernica durante la Guerra Civil Española. Con colores sombríos y formas distorsionadas, captura el caos y la angustia, convirtiéndose en un símbolo perdurable de paz y resistencia.</p>
                 </div>
                 <div class="hijo">
                     <h3>El beso</h3>
                     <img src="../imagenes/el-beso.jpg" alt="El beso">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium rerum, reprehenderit aliquid cupiditate magni harum culpa nulla eveniet, sint, provident architecto libero eligendi a doloribus aliquam molestiae quasi excepturi nesciunt!</p>
+                    <p>"El Beso", de Gustav Klimt, es una obra maestra del Art Nouveau que representa la pasión y la conexión entre dos amantes. Pintada entre 1907 y 1908, muestra a una pareja en un abrazo apasionado, rodeada de motivos ornamentales y tonos dorados característicos del estilo de Klimt. Esta pintura es tanto un símbolo del amor humano como una expresión artística de belleza y sensualidad que ha cautivado a espectadores de todo el mundo.</p>
                 </div>
                 <div class="hijo">
                     <h3>La joven de la perla</h3>
                     <img src="../imagenes/la-joven-de-la-perla.jpg" alt="La joven de la perla">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae autem a reiciendis? Laborum, ipsa quisquam placeat voluptate ratione est omnis eligendi ut voluptas repellat impedit quo iste consequatur. Possimus, ullam?</p>
+                    <p>"La Joven de la Perla", pintada por Johannes Vermeer en el siglo XVII, es una obra maestra que cautiva con su enigmática belleza. La joven retratada, con un turbante y una perla en la oreja, transmite un aura de misterio y elegancia. La técnica magistral de Vermeer en la captura de la luz y los detalles hace de esta pintura una pieza icónica del arte holandés del Siglo de Oro.</p>
                 </div>
                 <div class="hijo">
                     <h3>El nacimineto de Venus</h3>
                     <img src="../imagenes/el-nacimiento-de-venus.jpg" alt="El nacimiento de Venus">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et minus doloremque asperiores minima quis omnis maxime distinctio nulla porro ab ipsum ratione sint similique inventore iure excepturi molestiae, ipsam iste?</p>
+                    <p>"El Nacimiento de Venus" de Sandro Botticelli, pintado en el siglo XV, es una obra maestra del Renacimiento italiano. En esta pintura, Venus emerge grácilmente de una concha marina, rodeada por ninfas y dioses marinos. Con una paleta de colores suaves y una composición elegante, Botticelli captura la belleza idealizada de la diosa del amor. Esta obra sigue siendo admirada por su gracia y su representación de la mitología clásica.</p>
                 </div>
                 <div class="hijo">
                     <h3>Las Meninas</h3>
                     <img src="../imagenes/las-meninas.jpg" alt="Las Meninas">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, at illum. Magni nulla, debitis consequuntur qui laborum perferendis iusto nemo porro saepe doloribus magnam quod! Corrupti quis esse maiores voluptatem?</p>
+                    <p>"Las Meninas" de Diego Velázquez es una obra maestra del siglo XVII que retrata a la infanta Margarita rodeada por su séquito en la corte española. Velázquez desafía las convenciones al incluir su propia imagen en el lienzo, creando una intrigante interacción entre los personajes y desafiando la percepción del espacio y la realidad. Esta pintura es admirada por su maestría en el uso de la luz y la sombra, así como por su reflexión sobre el papel del arte y el artista en la sociedad.</p>
                 </div>
                 <div class="hijo">
                     <h3>La creación de Adán</h3>
                     <img src="../imagenes/la-creacion-de-adan.jpg" alt="La creación de Adán">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat corrupti reprehenderit nesciunt velit error. Atque doloribus minima corporis nulla magnam officia, doloremque beatae! Quod officia laudantium dolore adipisci, non debitis!</p>
+                    <p>"La Creación de Adán" de Miguel Ángel, pintada en el techo de la Capilla Sixtina, es una obra maestra renacentista que representa el momento en que Dios da vida a Adán. La intensidad y la majestuosidad de este acto trascendental se capturan con una composición dinámica y una técnica magistral. Esta obra icónica es una poderosa expresión de la conexión entre lo divino y lo humano, y sigue siendo admirada por su belleza y su significado espiritual.</p>
                 </div>
             </div>
         </main>
