--- a/paginas/sobre-nosotros.html
+++ b/paginas/sobre-nosotros.html
@@ -18,7 +18,7 @@
         <main>
             <h2>Sobre nosotros</h2>
             <div id="museum">
-                <p class="descrption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus incidunt veniam eveniet quae explicabo delectus reprehenderit sapiente maxime, eius, vitae voluptatibus nihil. Ab doloremque aliquam in alias nesciunt, asperiores omnis.</p>
+                <p class="descrption">Somos una galería de arte dedicada a promover y difundir obras excepcionales de artistas emergentes y establecidos. Nuestro objetivo es crear un espacio acogedor donde el arte pueda ser apreciado y compartido con la comunidad. Organizamos exposiciones, eventos y actividades educativas para fomentar el diálogo y el intercambio cultural. ¡Únete a nuestra comunidad artística y descubre nuevas perspectivas creativas con nosotros!</p>
                 <img class="photo" src="../imagenes/museo-castagnino.jpg" alt="">
             </div>
         </main>
