--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <h2>Ubicación</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores voluptas, totam perferendis assumenda eaque magni dolores culpa sequi aspernatur vero sint, eum itaque optio incidunt rem consequatur quis porro quos.</p>
+            <p>Encuéntranos en el corazón de Rosario, donde el arte y la cultura se fusionan para crear experiencias inolvidables. Con fácil acceso en transporte público y con amplio estacionamiento disponible, visitarnos es conveniente y accesible para todos. ¡Esperamos verte pronto!</p>
             <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.891212745812!2d-60.659203923513026!3d-32.953881472255404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6c3927af77%3A0xb4384826e2b35533!2sMuseo%20Municipal%20de%20Bellas%20Artes%20Juan%20B.%20Castagnino!5e0!3m2!1ses-419!2sar!4v1706488566994!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
