--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <hr>
             </div>
         </main>
-        <footer id="if">
+        <footer>
             <h3> 
                 <a href="./paginas/sobre-nosotros.html">Sobre nosotros</a>
                 <a href="./paginas/contacto.html">Contacto</a>
