agrego description y keywords

--- a/paginas/sobre-nosotros.html
+++ b/paginas/sobre-nosotros.html
@@ -2,12 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Somos la galería de arte número 1 en Rosario!">
+        <meta name="keywords" content="GDA, sobre nosotros, arte, artistas, comunidad, exposiciones, eventos, actividades, educación, intercambio cultural, creatividad">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="shortcut icon" href="../imagenes/favicon-GDA.png" type="image/x-icon">
-        <title>Galería de arte by Tiziano Parto</title>
+        <title>GDA - Sobre nosotros</title>
     </head>
     <body>
         <header>
