--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -2,13 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="Tenemos una ubicación privilegiada para que vengas a visitarnos cuando quieras!">
+        <meta name="keywords" content="GDA, ubicación, Rosario, centro, transporte público, estacionamiento, mapa">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="shortcut icon" href="../imagenes/favicon-GDA.png" type="image/x-icon">
-        <title>Galería de arte by Tiziano Parto</title>
+        <title>GDA - Ubicación</title>
     </head>
     <body>
         <header>
