--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="¡Bienvenidos a nuestra galería! Disfruta de las obas más famosas del mundo.">
+        <meta name="keywords" content="GDA, inicio, galería, arte, diez, obras, pinturas, famosas, mundo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
