--- a/paginas/pinturas.html
+++ b/paginas/pinturas.html
@@ -2,12 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Estas son las diez pinturas más famosas del mundo!">
+        <meta name="keywords" content="GDA, pinturas, Mona Lisa, La última cena, Noche estrellada, El grito, Guernica, El beso, La joven de la perla, El nacimiento de Venus, Las Meninas, La creación de Adán">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="shortcut icon" href="../imagenes/favicon-GDA.png" type="image/x-icon">
-        <title>Galería de arte by Tiziano Parto</title>
+        <title>GDA - Pinturas</title>
     </head>
     <body>
         <header>
